# shade-generator

./: .gitignore  README.md  pyproject.toml
shade_generator/: color.py  generator.py
tests/: generator_test.py
