[tool.poetry]
name = "shade_generator"
version = "0.1.0"
description = "Simple command line tool that generates shades between colors."
authors = ["Umut Seven <umutseven92@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "shade_generator" }]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"

[tool.poetry.scripts]
generate = "shade_generator.generator:generate"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^24.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
